fix: fix issues with gaps

--- a/src/pages/Main/components/Intro.scss
+++ b/src/pages/Main/components/Intro.scss
@@ -1,4 +1,6 @@
 .intro {
+  margin-top: 40px;
+
   &__banner {
     display: flex;
     justify-content: space-between;
